--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "parcel serve ./src/index.html",
     "build": "parcel build ./src/index.html --dist-dir build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "build-and-deploy": "yarn build && yarn deploy"
   }
 }
